cluster/gitops/monitoring/exporters/smartctl/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: smartctl-exporter
specs:
  - description: smartctl-exporter
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: prometheus-smartctl-exporter
        app.kubernetes.io/instance: smartctl-exporter
    ingress:
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "9633"
                protocol: TCP
